# tpeb-library

./: GNUmakefile  Makefile.am  Makefile.in  astrom.c  astrom.h  atime.c  atime.h  catalog.c  catalog.h  configure.ac  coord.c  coord.h  fits_wrap.c  fits_wrap.h  imutil.c  photom.c  photom.h  read_dat_files.c  strings.c  strings.h  window.c  window.h
beta/: plot_wrap.c  plot_wrap.h
include/: Makefile.am  coord.h  fileio.h  tpeb.h
old/: image_combine.c  image_combine.h  image_statistics.c  image_statistics.h  myfitsio_old.c  myfitsio_old.h  neville.c  neville.h  rk4.h  rk4e.h  stellar_fit.c  stellar_fit.h
src/: Makefile.am  astrom.c  atime.c  catalog.c  coord.c  fileio.c  fits_wrap.c  fitswrap.c  imutil.c  imutil.h  read_dat_files.c  read_dat_files.h  strings.c
